# wpage_scratch

./: Makefile.am  configure.ac
src/: Makefile.am  client.hxx  compositor.cxx  compositor.hxx  config.hxx  main.cxx  type.hxx  xdg_popup.cxx  xdg_popup.hxx  xdg_shell.cxx  xdg_shell.hxx  xdg_surface.cxx  xdg_surface.hxx
